test/corpus/full_test.txt
====
zf_1
====

%sort prop
%sort pf {_ prop}
%sort set
---

(source_file
  (command
    (sort_cmd
      name: (ident)))
  (command
    (sort_cmd
      name: (ident)))
  (outer_text
    (prose_markdown))
  (command
    (sort_cmd
      name: (ident)))
  (outer_text
    (prose_markdown)))
====
zf_2
====
  
%term false prop
%term imp {_ prop} {_ prop} prop
%term all {_ {_ set} prop} prop
%term eq {_ set} {_ set} prop
%term in {_ set} {_ set} prop
---

(source_file
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident))
        expr: (expr
          (app
            head: (atom
              (ident)))))))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown)))
====
zf_3
====
  
%def not ({_ prop} prop) ([a] imp a false) %.
%def and ({_ prop} {_ prop} prop) ([a][b] not (imp a (not b))) %.
%def or ({_ prop} {_ prop} prop) ([a][b] imp (not a) b) %.
%def iff ({_ prop} {_ prop} prop) ([a][b] and (imp a b) (imp b a)) %.
%def ex ({_ {_ set} prop} prop) ([p] not(all([z]not (p z)))) %.
%def unique ({_ {_ set} prop} prop) ([p] all([z] imp (p z) (all ([z'] imp (p z') (eq z z'))))) %.
%def ex_unique ({_ {_ set} prop} prop) ([p] and (ex p) (unique p)) %.
---

(source_file
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident)))))))
      expr: (expr
        (app
          head: (expr
            (app
              head: (atom
                (ident))
              trail: (lam
                decl: (decl
                  args: (arg
                    (ident)))
                expr: (expr
                  (app
                    head: (atom
                      (ident))
                    args: (atom
                      (ident))
                    args: (atom
                      (ident)))))))))))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident))
                trail: (pi
                  decl: (decl
                    args: (arg
                      (ident))
                    expr: (expr
                      (app
                        head: (atom
                          (ident)))))
                  expr: (expr
                    (app
                      head: (atom
                        (ident))))))))))
      expr: (expr
        (app
          head: (expr
            (app
              head: (atom
                (ident))
              trail: (lam
                decl: (decl
                  args: (arg
                    (ident)))
                expr: (expr
                  (app
                    head: (atom
                      (ident))
                    trail: (lam
                      decl: (decl
                        args: (arg
                          (ident)))
                      expr: (expr
                        (app
                          head: (atom
                            (ident))
                          args: (expr
                            (app
                              head: (atom
                                (ident))
                              args: (atom
                                (ident))
                              args: (expr
                                (app
                                  head: (atom
                                    (ident))
                                  args: (atom
                                    (ident))))))))))))))))))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident))
                trail: (pi
                  decl: (decl
                    args: (arg
                      (ident))
                    expr: (expr
                      (app
                        head: (atom
                          (ident)))))
                  expr: (expr
                    (app
                      head: (atom
                        (ident))))))))))
      expr: (expr
        (app
          head: (expr
            (app
              head: (atom
                (ident))
              trail: (lam
                decl: (decl
                  args: (arg
                    (ident)))
                expr: (expr
                  (app
                    head: (atom
                      (ident))
                    trail: (lam
                      decl: (decl
                        args: (arg
                          (ident)))
                      expr: (expr
                        (app
                          head: (atom
                            (ident))
                          args: (expr
                            (app
                              head: (atom
                                (ident))
                              args: (atom
                                (ident))))
                          args: (atom
                            (ident))))))))))))))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident))
                trail: (pi
                  decl: (decl
                    args: (arg
                      (ident))
                    expr: (expr
                      (app
                        head: (atom
                          (ident)))))
                  expr: (expr
                    (app
                      head: (atom
                        (ident))))))))))
      expr: (expr
        (app
          head: (expr
            (app
              head: (atom
                (ident))
              trail: (lam
                decl: (decl
                  args: (arg
                    (ident)))
                expr: (expr
                  (app
                    head: (atom
                      (ident))
                    trail: (lam
                      decl: (decl
                        args: (arg
                          (ident)))
                      expr: (expr
                        (app
                          head: (atom
                            (ident))
                          args: (expr
                            (app
                              head: (atom
                                (ident))
                              args: (atom
                                (ident))
                              args: (atom
                                (ident))))
                          args: (expr
                            (app
                              head: (atom
                                (ident))
                              args: (atom
                                (ident))
                              args: (atom
                                (ident))))))))))))))))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident))
                  trail: (pi
                    decl: (decl
                      args: (arg
                        (ident))
                      expr: (expr
                        (app
                          head: (atom
                            (ident)))))
                    expr: (expr
                      (app
                        head: (atom
                          (ident))))))))
            expr: (expr
              (app
                head: (atom
                  (ident)))))))
      expr: (expr
        (app
          head: (expr
            (app
              head: (atom
                (ident))
              trail: (lam
                decl: (decl
                  args: (arg
                    (ident)))
                expr: (expr
                  (app
                    head: (atom
                      (ident))
                    args: (expr
                      (app
                        head: (atom
                          (ident))
                        args: (expr
                          (app
                            head: (atom
                              (ident))
                            trail: (lam
                              decl: (decl
                                args: (arg
                                  (ident)))
                              expr: (expr
                                (app
                                  head: (atom
                                    (ident))
                                  args: (expr
                                    (app
                                      head: (atom
                                        (ident))
                                      args: (atom
                                        (ident))))))))))))))))))))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident))
                  trail: (pi
                    decl: (decl
                      args: (arg
                        (ident))
                      expr: (expr
                        (app
                          head: (atom
                            (ident)))))
                    expr: (expr
                      (app
                        head: (atom
                          (ident))))))))
            expr: (expr
              (app
                head: (atom
                  (ident)))))))
      expr: (expr
        (app
          head: (expr
            (app
              head: (atom
                (ident))
              trail: (lam
                decl: (decl
                  args: (arg
                    (ident)))
                expr: (expr
                  (app
                    head: (atom
                      (ident))
                    args: (expr
                      (app
                        head: (atom
                          (ident))
                        trail: (lam
                          decl: (decl
                            args: (arg
                              (ident)))
                          expr: (expr
                            (app
                              head: (atom
                                (ident))
                              args: (expr
                                (app
                                  head: (atom
                                    (ident))
                                  args: (atom
                                    (ident))))
                              args: (expr
                                (app
                                  head: (atom
                                    (ident))
                                  args: (expr
                                    (app
                                      head: (atom
                                        (ident))
                                      trail: (lam
                                        decl: (decl
                                          args: (arg
                                            (ident)))
                                        expr: (expr
                                          (app
                                            head: (atom
                                              (ident))
                                            args: (expr
                                              (app
                                                head: (atom
                                                  (ident))
                                                args: (atom
                                                  (ident))))
                                            args: (expr
                                              (app
                                                head: (atom
                                                  (ident))
                                                args: (atom
                                                  (ident))
                                                args: (atom
                                                  (ident)))))))))))))))))))))))))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident))
                  trail: (pi
                    decl: (decl
                      args: (arg
                        (ident))
                      expr: (expr
                        (app
                          head: (atom
                            (ident)))))
                    expr: (expr
                      (app
                        head: (atom
                          (ident))))))))
            expr: (expr
              (app
                head: (atom
                  (ident)))))))
      expr: (expr
        (app
          head: (expr
            (app
              head: (atom
                (ident))
              trail: (lam
                decl: (decl
                  args: (arg
                    (ident)))
                expr: (expr
                  (app
                    head: (atom
                      (ident))
                    args: (expr
                      (app
                        head: (atom
                          (ident))
                        args: (atom
                          (ident))))
                    args: (expr
                      (app
                        head: (atom
                          (ident))
                        args: (atom
                          (ident)))))))))))))
  (command
    (stop))
  (outer_text
    (prose_markdown)))
====
zf_4
====
  

%term imp_i {_ {_ pf _A} pf _B} pf (imp _A _B) %.
%term imp_e {_ pf (imp _A _B)} {_ pf _A} pf _B %.
%term all_i {_ {z} pf (_P z)} pf (all _P) %.
%term all_e {_ pf (all _P)} {z set} pf (_P z) %.
%term classical {_ pf (not(not _A))} pf _A %.
%term eq_i pf (eq _A _A) %.
%term eq_e {_ pf (eq _A _B)} {s {_ set} prop} {_ pf (s _A)} pf (s _B) %.
%term if {_ prop} {_ set} {_ set} set
%term if_then {_ pf _P} pf (eq (if _P _X _Y) _X) %.
%term if_else {_ pf (not _P)} pf (eq (if _P _X _Y) _Y) %.
%term empty    set %.
%term double   {_ set} {_ set} set %.
%term unions   {_ set} set %.
%term powerset {_ set} set %.
%term replace  {_ set} {_ {_ set} set} set %.
%term omega    set %.
---

(source_file
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident))
        expr: (expr
          (app
            head: (atom
              (ident)))))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident))
        expr: (expr
          (app
            head: (atom
              (ident)))))))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident)))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (term_cmd
      decl: (decl
        args: (arg
          (ident))
        expr: (expr
          (app
            head: (atom
              (ident)))))))
  (command
    (stop))
  (outer_text
    (prose_markdown)))
====
zf_5
====
  
%def single ({_ set} set) [x] double x x %.
%def restrict ({_ set} {_ {_ set} prop} set) [x][q] unions (replace x ([z] if (q z) (single z) empty)) %.
%def inter ({_ set} {_ set} set) [x][y] restrict x ([z] in z y) %.
%def union ({_ set} {_ set} set) [x][y] unions (double x y) %.
%def zero set empty %.
%def succ ({_ set} set) [x] union x (single x) %.
%def subset ({_ set} {_ set} prop) [x][y]all[z] imp (in z x) (in z y) %.
%def disjoint ({_ set} {_ set} prop) [x][y] eq (inter x y) empty %.
%def omega_closed ({_ set} prop) [x] and (in empty x) (all [n] imp (in n x) (in (succ n) x)) %.
---

(source_file
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident)))))))
      expr: (expr
        (app
          head: (atom
            (ident))))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident))
                trail: (pi
                  decl: (decl
                    args: (arg
                      (ident))
                    expr: (expr
                      (app
                        head: (atom
                          (ident))
                        trail: (pi
                          decl: (decl
                            args: (arg
                              (ident))
                            expr: (expr
                              (app
                                head: (atom
                                  (ident)))))
                          expr: (expr
                            (app
                              head: (atom
                                (ident))))))))
                  expr: (expr
                    (app
                      head: (atom
                        (ident))))))))))
      expr: (expr
        (app
          head: (atom
            (ident))))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident))
                trail: (pi
                  decl: (decl
                    args: (arg
                      (ident))
                    expr: (expr
                      (app
                        head: (atom
                          (ident)))))
                  expr: (expr
                    (app
                      head: (atom
                        (ident))))))))))
      expr: (expr
        (app
          head: (atom
            (ident))))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident))
                trail: (pi
                  decl: (decl
                    args: (arg
                      (ident))
                    expr: (expr
                      (app
                        head: (atom
                          (ident)))))
                  expr: (expr
                    (app
                      head: (atom
                        (ident))))))))))
      expr: (expr
        (app
          head: (atom
            (ident))))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (atom
        (ident))
      expr: (expr
        (app
          head: (atom
            (ident))))))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident)))))))
      expr: (expr
        (app
          head: (atom
            (ident))))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident))
                trail: (pi
                  decl: (decl
                    args: (arg
                      (ident))
                    expr: (expr
                      (app
                        head: (atom
                          (ident)))))
                  expr: (expr
                    (app
                      head: (atom
                        (ident))))))))))
      expr: (expr
        (app
          head: (atom
            (ident))))))
  (outer_text
    (prose_markdown))
  (command
    (stop))
  (command
    (define_cmd
      name: (ident)
      sort: (expr
        (app
          head: (atom
            (ident))
          trail: (pi
            decl: (decl
              args: (arg
                (ident))
              expr: (expr
                (app
                  head: (atom
                    (ident)))))
            expr: (expr
              (app
                head: (atom
                  (ident))
                trail: (pi
                  decl: (decl
                    args: (arg
                      (ident))
                    expr: (expr
                      (app
                        head: (atom
                          (ident)))))
                  expr: (expr
                    (app
                      head: (atom
                        (ident))))))))))
      expr: (expr
        (app
          head: (atom
